tests/ignore_package/ignore_package.exp
Error ------------------------------------------------------------------------------------------------------ foo.js:8:17

Cannot resolve module `underscore`. [cannot-resolve-module]

   8| var _ = require('underscore');
                      ^^^^^^^^^^^^



Found 1 error
